# project-master

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  taxonomy.json  testing.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_v2_schema.py  0003_v3_schema.py  0004_v4_schema.py  0005_v5_simplify_documents.py
backend/: config.py  dependencies.py  main.py
backend/agents/: analysis_agent.py  base.py  clarifying_agent.py  ideation_agent.py  question_agent.py  reformulation_agent.py  retrieval_agent.py  synthesizer_agent.py  tech_stack_agent.py
backend/api/v1/: router.py
backend/db/: engine.py  models.py
backend/rag/: chunker.py  embedder.py  retriever.py
backend/schemas/: memory.py
backend/schemas/agents/: __init__.py  analysis.py  clarifying.py  common.py  (+6 more)
backend/services/: memory_service.py  pipeline_service.py  session_service.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AsteriskLogo.tsx  HomeView.tsx  IdeationChatFlow.tsx  NewProjectFlow.tsx  ProjectDetailView.tsx  ProjectSetup.tsx  PromptInput.tsx  PromptSessionFlow.tsx  QAPanel.tsx  ResultsView.tsx  SettingsView.tsx
frontend/hooks/: useIdeationChat.ts  useProjectSetup.ts  useProjects.ts  useSession.ts
frontend/lib/: api.ts  types.ts
scripts/: ingest.py  taxonomy_discovery.py  test_pipeline.py
tests/: conftest.py
tests/integration/: test_session_respond.py  test_session_start.py
tests/unit/: test_question_agent.py  test_reformulation_agent.py  test_synthesizer_agent.py
(+7 files in other folders)
